--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <button id="close" onclick="hideInfo()">X Close</button>
     <div id="info-inner">
       <section>
-        <p>Move your right hand left to right to change the colour of the tears</p>
-        <p>Move your left hand up and down to change the size of the tears</p>
+        <p>Move your left hand left to right to change the colour of the tears</p>
+        <p>Move your right hand up and down to change the size of the tears</p>
       </section>
       <button id="cam-toggle" onclick="toggleCam()">Toggle camera</button>
       <div>created by <a href="https://amcc.io" target="_blank">amcc.io</a></div>
